--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -28,12 +28,12 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :state_id %><br>
-    <%= f.number_field :state_id %>
+    <%= f.label :postcode_id %><br>
+    <%= f.number_field :postcode_id %>
   </div>
   <div class="field">
-    <%= f.label :postcode %><br>
-    <%= f.number_field :postcode %>
+    <%= f.label :state_id %><br>
+    <%= f.number_field :state_id %>
   </div>
   <div class="field">
     <%= f.label :country_id %><br>
