--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -21,13 +21,13 @@
 </p>
 
 <p>
-  <strong>State:</strong>
-  <%= @address.state_id %>
+  <strong>Postcode:</strong>
+  <%= @address.postcode_id %>
 </p>
 
 <p>
-  <strong>Postcode:</strong>
-  <%= @address.postcode %>
+  <strong>State:</strong>
+  <%= @address.state_id %>
 </p>
 
 <p>
