--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -7,8 +7,8 @@
       <th>Street number</th>
       <th>Street</th>
       <th>City</th>
-      <th>State</th>
       <th>Postcode</th>
+      <th>State</th>
       <th>Country</th>
       <th colspan="3"></th>
     </tr>
@@ -21,8 +21,8 @@
         <td><%= address.street_number %></td>
         <td><%= address.street %></td>
         <td><%= address.city %></td>
+        <td><%= address.postcode_id %></td>
         <td><%= address.state_id %></td>
-        <td><%= address.postcode %></td>
         <td><%= address.country_id %></td>
         <td><%= link_to 'Show', address %></td>
         <td><%= link_to 'Edit', edit_address_path(address) %></td>
