--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -15,6 +15,14 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :warehouse_id %><br>
+    <%= f.number_field :warehouse_id %>
+  </div>
+  <div class="field">
+    <%= f.label :parent_entity_id %><br>
+    <%= f.number_field :parent_entity_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
