--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -4,6 +4,8 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Warehouse</th>
+      <th>Parent entity</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +14,8 @@
     <% @entities.each do |entity| %>
       <tr>
         <td><%= entity.name %></td>
+        <td><%= entity.warehouse_id %></td>
+        <td><%= entity.parent_entity_id %></td>
         <td><%= link_to 'Show', entity %></td>
         <td><%= link_to 'Edit', edit_entity_path(entity) %></td>
         <td><%= link_to 'Destroy', entity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
