--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :state_id %><br>
-    <%= f.number_field :state_id %>
+  /*  <%= f.number_field :state_id %> */
   </div>
   <div class="field">
     <%= f.label :country_id %><br>
