--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -21,9 +21,9 @@
         <td><%= address.street_number %></td>
         <td><%= address.street %></td>
         <td><%= address.city %></td>
-        <td><%= address.postcode_id %></td>
-        <td><%= address.state_id %></td>
-        <td><%= address.country_id %></td>
+        <td><%= Postcode.hash[address.postcode_id].code %></td>
+        <td><%= State.hash[address.state_id].name %></td>
+        <td><%= Country.hash[address.country_id].name %></td>
         <td><%= link_to 'Show', address %></td>
         <td><%= link_to 'Edit', edit_address_path(address) %></td>
         <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
